tests/test_assets/semantic/invalid/types/void_struct_fields.cog
BadVoidStruct::struct {
    field: void;
}

BadVoidPointerStruct::struct {
    field: void*;
}