tests/test_assets/semantic/invalid/types/void_struct_fields.expected
semantic error at line 2: struct field cannot have type void
semantic error at line 6: struct field cannot have type void
2 semantic errors generated.
